FE : 문의페이지 수정 중
Former-commit-id: 491fa363d55b417a4f63df35696a14144c2d944c

--- a/FE/wedding101/src/pages/BoardQuestion/BoardQuestion.css
+++ b/FE/wedding101/src/pages/BoardQuestion/BoardQuestion.css
@@ -40,3 +40,15 @@
 #BQ-grid-align{
     margin-top: 6%;
 }
+
+.BQ-newQuestionContent{
+    width: 100%;
+    height: 100%;
+    border-color: transparent;
+    background-color: transparent;
+}
+
+.BQ-blank-for-askContent{
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
