--- a/FE/wedding101/src/components/WeddingInvitation/InvitationForm.css
+++ b/FE/wedding101/src/components/WeddingInvitation/InvitationForm.css
@@ -12,10 +12,10 @@
     font-family: 'Gowun Batang', serif;
 }
 
-body {
+/* body {
     font: 14px "Century Gothic", Futura, sans-serif;
     margin: 20px;
-}
+} */
 
 .invitation {
     border: 1px solid #999;
