--- a/FE/wedding101/src/pages/BoardReview/BoardReview.css
+++ b/FE/wedding101/src/pages/BoardReview/BoardReview.css
@@ -10,3 +10,29 @@ tablebox {
 .pagination {
     justify-items: center;
 }
+
+.newReviewWrapper{
+    width: 100%;
+    height: 90%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+#newReviewTitle {
+    width: 100%;
+    margin: 1% 0 1% 0;
+    padding: 0 0 0 3vh;
+    font-size: 2vh;
+}
+
+#newReviewContent{
+    width: 100%;
+    height: 90%;
+}
+
+#newReviewHL {
+    justify-content: space-around;
+    width: 30%;
+}
