FE : 문의창 안에 edit, delete 버튼 생성
Former-commit-id: d0d683d066c6910ad7863390f146a3d358381ab1

--- a/FE/wedding101/src/pages/BoardQuestion/BoardQuestion.css
+++ b/FE/wedding101/src/pages/BoardQuestion/BoardQuestion.css
@@ -38,7 +38,7 @@
 }
 
 #BQ-grid-align{
-    margin-top: 6%;
+    margin-top: 3%;
 }
 
 .BQ-newQuestionContent{
@@ -51,4 +51,12 @@
 .BQ-blank-for-askContent{
     margin-top: 1%;
     margin-bottom: 1%;
+}
+
+.BQ-Edit-Delete-Buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    width: 95%;
+    margin-bottom: -1%;
 }
