--- a/FE/wedding101/src/pages/BoardQuestion/BoardQuestion.css
+++ b/FE/wedding101/src/pages/BoardQuestion/BoardQuestion.css
@@ -49,7 +49,7 @@
 }
 
 .BQ-blank-for-askContent{
-    margin-top: 1%;
+    margin-top: 3%;
     margin-bottom: 1%;
 }
 
@@ -59,4 +59,11 @@
     justify-content: right;
     width: 95%;
     margin-bottom: -1%;
+}
+
+/* 구분선  */
+.BQ-Division-Line{
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  margin-top: 2%;
+  margin-bottom: 3%;
 }
