FE: [122] 리뷰 페이지 진행 중
Former-commit-id: 19846197b4552991e5e5f85ca1c0fc44366c76f2

--- a/FE/wedding101/src/pages/Main/MainArea02.css
+++ b/FE/wedding101/src/pages/Main/MainArea02.css
@@ -113,10 +113,9 @@
 
 #title_p2_01{
   width:100%;
+  height: 50%;
 }
 
 #explain_p2_01{
-  width:100%;
-  font-size: 6vh;
   font-family: 'yusei magic';
 }
