--- a/FE/wedding101/src/pages/BoardQuestion/BoardQuestion.css
+++ b/FE/wedding101/src/pages/BoardQuestion/BoardQuestion.css
@@ -53,7 +53,7 @@
     margin-bottom: 1%;
 }
 
-.BQ-Edit-Delete-Buttons{
+.BQ-Edit-Cancel-Buttons{
     display: flex;
     flex-direction: row;
     justify-content: right;
