--- a/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess01.css
+++ b/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess01.css
@@ -14,8 +14,8 @@
     margin: 5px;
 }
 
-.invitation{
+.process-main .invitation{
     width: 300px;
-    height: 300px;
+    height: 400px;
     overflow-y: scroll
 }
