FE : [114] 템플릿 사진 업로드 성공
Former-commit-id: 415cbd4673d700b969069716e24839ca17a68a37

--- a/FE/wedding101/src/components/WeddingInvitation/InvitationForm.css
+++ b/FE/wedding101/src/components/WeddingInvitation/InvitationForm.css
@@ -12,7 +12,7 @@
     font-family: 'Gowun Batang', serif;
 } */
 
-/* body {
+/*   {
     font: 14px "Century Gothic", Futura, sans-serif;
     margin: 20px;
 } */
