--- a/FE/wedding101/src/components/common/Header.css
+++ b/FE/wedding101/src/components/common/Header.css
@@ -6,17 +6,17 @@
   justify-content: space-between;
   align-items: center;
   padding-left: 3%;
-  margin-right:3%;
+  padding-right:3%;
 }
 
 .logo {
   float: left;
-  width: fit-content;
   display: flex;
+  width: 15vw;
   flex-direction: row;
-  justify-content: space-between;
-  width: 9.7lh;
+  justify-content: center;
   cursor: pointer;
+  height: 35%;
 }
 
 .logo-font-tag{
