front : syntax 수정
Former-commit-id: 092bc3201fdd17d573227db9d70bf2af687cfcf6

--- a/FE/wedding101/src/components/common/Footer.css
+++ b/FE/wedding101/src/components/common/Footer.css
@@ -1,7 +1,10 @@
 .footer {
   background-color: #ffffff;
   width: 100%;
-  height: 5%;
+  height: 20%;
   position: relative;
   transform: translatY(-100%);
+}
+.mock {
+  color: #ffffff;
 }
