front : 결혼정보 확인
Former-commit-id: f97dfd401d5de10e71f1e24e09502ac3c91bb2a4

--- a/FE/wedding101/src/components/user/UserModify/ModifyForm.css
+++ b/FE/wedding101/src/components/user/UserModify/ModifyForm.css
@@ -1,4 +1,8 @@
-.user-table {
-    display: flex;
-    flex-direction: row;
+.MuiTableContainer-root { 
+    min-width: 500px;
+    max-width: 900px;
+}
+
+.user-table .MuiTableBody-root .MuiTableCell-root:nth-child(1) {
+    font-weight: bold;
 }
