--- a/FE/wedding101/src/pages/User/UserMyPage/UserMyPage.css
+++ b/FE/wedding101/src/pages/User/UserMyPage/UserMyPage.css
@@ -6,14 +6,7 @@
 
 .user-mypage-items {
     padding-top: 5%;
+    display: flex;
+    align-items: flex-start;
 }
 
-.user-mypage-item {
-    background-color: #ffffff;
-    width: 250px;
-    height: 80px;
-    margin: 2%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
