--- a/FE/wedding101/src/pages/ServiceProcess/ServiceProcess04.css
+++ b/FE/wedding101/src/pages/ServiceProcess/ServiceProcess04.css
@@ -1,6 +1,6 @@
 .service-process04 {
     background-color: #fff4f3;
-    height: 100vh;
-    padding-top: 10%;
+    height: 80vh;
+    padding-top: 8vh;
   }
   
