--- a/FE/wedding101/src/pages/Album/AlbumList.css
+++ b/FE/wedding101/src/pages/Album/AlbumList.css
@@ -1,23 +1,23 @@
 .album-list {
-    background-color: #C5DAD1;
-    height: 65vh;
-    padding: 10%;
-    }
+  background-color: #c5dad1;
+  height: 70vh;
+  padding: 5%;
+}
 
-.media-items{
-    display: flex;
-    flex-wrap: wrap; /*크기변형없이 한줄 넘으면 다음줄로*/
-    justify-content: center;
-    background-color: bisque;
+.media-items {
+  display: flex;
+  flex-wrap: wrap; /*크기변형없이 한줄 넘으면 다음줄로*/
+  justify-content: center;
+  background-color: bisque;
 }
 .pagination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .filter-icons {
-    display: flex;
+  display: flex;
 }
 .bin-icon {
-    justify-content: end;
+  justify-content: end;
 }
