--- a/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess01.css
+++ b/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess01.css
@@ -1,10 +1,16 @@
 .process01 {
     background-color: #C5DAD1;
-    height: 70vh;
-    }
-.process-main {
-    padding-top: 10%;
+    height: 90vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
+.process01-mainframe{
+    width: 70%;
+    display: flex;
+    justify-content: center;
+}
+
 .invitation-item{
     margin: 1px;
 }
@@ -13,7 +19,6 @@
     float: right;
     margin: 5px;
 }
-
 .process-main .invitation{
     width: 300px;
     height: 300px;
