--- a/FE/wedding101/src/components/common/Footer.css
+++ b/FE/wedding101/src/components/common/Footer.css
@@ -1,9 +1,12 @@
 .footer {
   background-color: #ffffff;
   width: 100%;
-  height: 5%;
+  height: 5px;
   position: relative;
   transform: translatY(-100%);
+}
+.a101 {
+  font-weight: bold;
 }
 .mock {
   color: #ffffff;
