--- a/FE/wedding101/src/pages/Album/AlbumList.css
+++ b/FE/wedding101/src/pages/Album/AlbumList.css
@@ -1,7 +1,9 @@
 .album-list {
   background-color: #c5dad1;
-  height: 70vh;
+  height: auto;
+  min-height: 100%;
   padding: 5%;
+  padding-bottom: 5px;
 }
 
 .media-items {
@@ -9,6 +11,7 @@
   flex-wrap: wrap; /*크기변형없이 한줄 넘으면 다음줄로*/
   justify-content: center;
   background-color: bisque;
+  max-width: 830px;
 }
 .pagination {
   display: flex;
