초대프로세스 수정 + 날짜 입력 변경
Former-commit-id: a0ed3c960694958809e7aadfb818813c9d4e2660 [formerly 457c9ee4a7ea5e71e4e0e224b052a3c0d8c4677b]
Former-commit-id: 1ba0b2ed7c64b1f2a972785e1ee38fc6c3a1dcb5

--- a/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess02.css
+++ b/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess02.css
@@ -1,9 +1,7 @@
 .process02 {
     background-color: #C5DAD1;
     height: 70vh;
-    }
-.process-main {
-    padding-top: 10%;
+    padding-top: 10vh;
 }
 .inner-content {
     display: flex;
