--- a/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess01.css
+++ b/FE/wedding101/src/pages/WeddingInvitation/InvitationProcess01.css
@@ -1,6 +1,7 @@
 .process01 {
     background-color: #C5DAD1;
-    height: 90vh;
+    height: 92vh;
+    padding-top: 10vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -21,6 +22,11 @@
 }
 .process-main .invitation{
     width: 300px;
-    height: 300px;
+    height: 400px;
     overflow-y: scroll
+}
+
+.invitation_slider{
+    height: 100%;
+    width: 35%;
 }
