--- a/FE/wedding101/src/components/user/UserModify/UserDetailForm.css
+++ b/FE/wedding101/src/components/user/UserModify/UserDetailForm.css
@@ -6,3 +6,14 @@
 .user-table .MuiTableBody-root .MuiTableCell-root:nth-child(1) {
     font-weight: bold;
 }
+
+.modify-form {
+    position: flex;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1000;
+    background-color: background-paper;
+    border: 2px solid #000;
+    box-shadow: 24;
+}
