Fix : dummy.sql 아직사진/영상없음
Former-commit-id: 3a7c392e2249b1c404c410b106b6bdac49e0a1e3

--- a/FE/wedding101/src/components/WeddingInvitation/InfoModify/InfoDetailForm.css
+++ b/FE/wedding101/src/components/WeddingInvitation/InfoModify/InfoDetailForm.css
@@ -11,6 +11,6 @@
 }
 
 
-.info-table .MuiTableBody-root .MuiTableCell-root:nth-child(1) {
+.MuiTableBody-root .MuiTableCell-root:nth-child(1) {
     font-weight: bold;
 }
