front : 결혼정보 수정 -ing
Former-commit-id: 482d262a6073ab720b1cc9bb67b0725c80fe7b7c

--- a/FE/wedding101/src/components/WeddingInvitation/InfoModify/InfoModifyForm.css
+++ b/FE/wedding101/src/components/WeddingInvitation/InfoModify/InfoModifyForm.css
@@ -9,3 +9,12 @@
     margin-top: 2%;
     margin-bottom: 3%;
 }
+
+.info-item {
+    display: flex;
+    flex-direction: row;
+    /* justify-content: center; */
+    align-content: center;
+    align-items: center;
+    padding: 1.5px;
+}
