--- a/FE/wedding101/src/components/WeddingInvitation/InfoModify/InfoModifyForm.css
+++ b/FE/wedding101/src/components/WeddingInvitation/InfoModify/InfoModifyForm.css
@@ -13,8 +13,10 @@
 .info-item {
     display: flex;
     flex-direction: row;
-    /* justify-content: center; */
+    justify-content: space-between;
     align-content: center;
     align-items: center;
     padding: 1.5px;
+    margin-right: 50%;
+    
 }
