Fix : 마이페이지 css
Former-commit-id: 8cd9ec96cc5299b2dde5bdcd65632306bc404b48 [formerly a5a551716958c32437367fe4546da3f80422626d]
Former-commit-id: 0a0dfdfda7565b5bb66481ec277802964e00c93e

--- a/FE/wedding101/src/components/user/UserModify/UserModifyForm.css
+++ b/FE/wedding101/src/components/user/UserModify/UserModifyForm.css
@@ -10,6 +10,14 @@
 }
 
 .user-modify-btn {
-    float: right;
-    margin-top: 2.5%;
+    margin-top: 3%;
+    border-top: 3px solid rgba(0, 0, 0, 0.1);
+}
+
+.duplicate-btn {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: flex-end;
+
 }
