invitation01 css 수정
Former-commit-id: c2bc1423fe352062af20e17eda4aafe4fa644914 [formerly 2635beaf600fc375a18ef30ef9ee49014491eb82]
Former-commit-id: 4e33ffe65470b122161302473f1a16269e7b1f98

--- a/FE/wedding101/src/pages/Main/MainArea02.css
+++ b/FE/wedding101/src/pages/Main/MainArea02.css
@@ -34,7 +34,7 @@
   align-items: center;
 }
 
-.slick-slider {
+.main-slider {
   position: relative;
   height: 80%;
   width: 70%;
@@ -61,14 +61,14 @@
   opacity: 0.75;
 }
 
-.slick-current .inFrame{
+.main-slider .slick-current .inFrame{
   width: 80.41%;
   height: 100%;
   object-fit: fill;
   opacity: 1;
 }
 
-.slick-dots{
+.main-slider .slick-dots{
   position: relative;
   right: 75.6%;
   bottom: 4%;
