Fix : 메인화면 폰트 변경
Former-commit-id: 4f5df92269c139d35c885ec34c04314247864316

--- a/FE/wedding101/src/pages/Main/MainArea02.css
+++ b/FE/wedding101/src/pages/Main/MainArea02.css
@@ -97,6 +97,9 @@
   color:#B3B3B3;
   opacity: 1;
 }
+.explainText{
+  /* height: 10%; */
+}
 
 #HL_p2_01{
   width: 100%;
@@ -113,9 +116,12 @@
 
 #title_p2_01{
   width:100%;
-  height: 50%;
+  height: 30%;
 }
 
 #explain_p2_01{
-  font-family: 'yusei magic';
+  font-family: "Nanum Brush Script";
+  color: white;
+  text-shadow: 2px 2px 4px gray;
+  font-size: 6vh;
 }
