--- a/FE/wedding101/src/pages/Album/AlbumList.css
+++ b/FE/wedding101/src/pages/Album/AlbumList.css
@@ -12,6 +12,9 @@
   text-align: center;
   align-items: center;
 }
+.item-area{
+  align-items: center;
+}
 .media-items {
   display: flex;
   flex-wrap: wrap; /*크기변형없이 한줄 넘으면 다음줄로*/
