Fix : service process css
Former-commit-id: 443e143bfd78c7f0e5650160f3109aa222360434 [formerly f4438cdfed08e8a535f0d2b237611f44c6cfa33a]
Former-commit-id: 26282493ef7b5de5d6d9dcb84eb07b5fde31a538

--- a/FE/wedding101/src/pages/Main/MainArea04.css
+++ b/FE/wedding101/src/pages/Main/MainArea04.css
@@ -7,10 +7,12 @@
   background-color: #d9cfde;
 }
 
-.content-wrapper {
+.service-content-wrapper {
   height:115%;
+}
 
-
+.content-wrapper {
+  height:75%;
 }
 
 #VL_p4_01 {
