--- a/FE/wedding101/src/components/WeddingInvitation/InfoModify/InfoDetailForm.css
+++ b/FE/wedding101/src/components/WeddingInvitation/InfoModify/InfoDetailForm.css
@@ -14,3 +14,14 @@
 .MuiTableBody-root .MuiTableCell-root:nth-child(1) {
     font-weight: bold;
 }
+
+.info-modify-form {
+    position: flex;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1000;
+    background-color: background-paper;
+    border: 2px solid #000;
+    box-shadow: 24;
+}
